howbox icons fixed, numbers still not responsive

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,16 @@ a:visited, a:hover, a:active {
 }
 
 .howbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
