--- a/sass/components/__icons.scss
+++ b/sass/components/__icons.scss
@@ -5,10 +5,23 @@
 }
 
 .howbox{
-  &__number{
-
-  }
-  &__icon{
+&__numholder {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    color: white;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    margin-left: -30px;
     
   }
+  
+  &__icon {
+    display: inline-block;
+    width: 20%;
+    outline: 1px solid red;
+  }
+
 }
