--- a/sass/layouts/_cards.scss
+++ b/sass/layouts/_cards.scss
@@ -20,6 +20,7 @@
     border-radius: 25px;
     margin: 0px 32px 25px 35px;
     justify-content: space-evenly;
+    white-space: nowrap;
   }
 }
 
