--- a/sass/layouts/_container.scss
+++ b/sass/layouts/_container.scss
@@ -22,6 +22,9 @@
 }
 
 .howbox{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-evenly;
   justify-items: center;
 }
